--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <main>
             <h2>A Little More About Me</h2>
             <section>
-                <!--place image here-->
+                <!--image here-->
             </section>
             HI, I AM ITHIHAS , AN INTERNATIONAL STUDENT, YOU ARE SEEING THIS BECAUSE THIS IS MY SECOND ATTEMPT IN css , MY PROGRAM IS: IMDW
             
